# docs/api/platform-openapi-v1.yaml
@@ -3601,6 +3601,10 @@ components:
           type: string
           minLength: 11
           maxLength: 128
+        clientKey:
+          type: string
+          minLength: 32
+          maxLength: 256
         defaultEnvironment:
           type: string
           minLength: 1
